# nginx-conf-parser

./: .gitignore  .gitlab-ci.yml  .releaserc.yaml  .travis.yml  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
lib/: nginx_conf_parser.py
lib/core/: context.py  event_context.py  events_context.py  http_context.py  main_context.py  stream_context.py  upstream.py  upstream_context.py  utils.py
lib/tests/: event_context_test.py  http_context_test.py  main_context_test.py  nginx_conf_parser_test.py  stream_context_test.py  upstream_test.py
lib/tests/features/: nginx.conf  (+4 more)
nginx-conf-parser/: NginxConfParser.py  nginx_conf_parser.py
nginx-conf-parser/core/: EventContext.py  HttpContext.py  main_context.py
nginx-conf-parser/tests/: EventContextTest.py  NginxConfParserTest.py  event_context_test.py  nginx_conf_parser_test.py
nginx_conf_parser/: http_context.py  limit_except_context.py  location_context.py  server_context.py  upstream_context.py
services_spec_generator/: config.conf  nginx_config_merge.py  parse_conf.py
services_spec_generator/nginx_conf_parser/: context.py  events_context.py  http_context.py  limit_except_context.py  location_context.py  server_context.py  stream_context.py  upstream_context.py  utils.py
tests/: event_context_test.py  http_context_test.py  limit_except_context_test.py  location_context_test.py  main_context_test.py  nginx_conf_parser_test.py  server_context_test.py  stream_context_test.py  upstream_test.py
tests/features/: nginx_stream_sample.conf  nginx_with_http.conf
(+1 files in other folders)
